fleet/gpsd-ui/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpsd-ui
  labels:
    app: gpsd-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpsd-ui
  template:
    metadata:
      labels:
        app: gpsd-ui
    spec:
      containers:
        - name: gpsd-ui
          image: registry.lab.suse/library/gpsd-ui/gpsd-ui:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
