fleet/gpsd-ui/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gpsd-ui
  labels:
    app: gpsd-ui
spec:
  selector:
    app: gpsd-ui
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
